# GSI

./: .gitignore  CMakeLists.txt  GSI_vc9.sln  README.txt  README_LINUX.txt  create_linux.sh
Base/: DenseMatrix.cpp  DenseMatrix.h  SparseMatrix.cpp  Vector.cpp  Vector.h
DenseMatrixSolver/: Architecture.cpp  Architecture.h  DenseLinearSystem.cpp  DenseLinearSystem.h  DenseMatrixSolver.sln  DenseMatrixSolver.vcproj  LAPACKWrapper.cpp  LAPACKWrapper.h  RMSSolver.cpp  RMSSolver.h  Solver_General.cpp  Solver_General.h
SolverTests/: DenseMatrixSolverTests.cpp  SolverTests.cpp  SolverTests_vc9.vcproj  SparseMatrixSolverTests.cpp  SparseMatrixTests.cpp  config.h
SparseMatrixSolver/: Solver_TAUCS.cpp  Solver_UMFPACK.cpp  SparseLinearSystem.cpp  SparseMatrixSolver_vc9.vcproj  SparseSymmetricMatrixSolver.cpp  SparseSymmetricMatrixSolver.h
linux_patches/: blas_patch.txt
taucs_patches/: configure_diff.txt  linux64.diff
